# oldtools.dev

./: CMakeLists.txt  CMakelists.txt  README.md
cmake/: AutoCollect.cmake  GroupSources.cmake
source/server/: CMakeLists.txt
